--- a/data/index.css
+++ b/data/index.css
@@ -24,7 +24,7 @@
 }
 
 body {
-    font-family: "Open Sans", Roboto, Arial, sans-serif;
+    font-family: Roboto, Arial, sans-serif;
     font-size: 14px;
     max-width: 800px;
     margin: 0 auto;
