--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,7 +11,7 @@
     <!-- Mermaid support -->
     <script type="module">
       import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-      mermaid.initialize({ startOnLoad: true });
+      mermaid.initialize({ startOnLoad: true, theme: 'neutral', layout: 'adaptive', themeVariables: { maxWidth: '800px' } });
     </script>
   </body>
 </html>
