--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
@@ -11,7 +12,11 @@
     <!-- Mermaid support -->
     <script type="module">
       import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-      mermaid.initialize({ startOnLoad: true, theme: 'neutral', layout: 'adaptive', themeVariables: { maxWidth: '800px' } });
+      mermaid.initialize({
+        startOnLoad: true,
+        theme: 'neutral',
+        defaultRenderer: 'elk'
+      });
     </script>
   </body>
 </html>
