trying elk again

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,7 +15,9 @@
       mermaid.initialize({
         startOnLoad: true,
         theme: 'neutral',
-        defaultRenderer: 'elk'
+        flowchart: {
+          defaultRenderer: 'elk'
+        },
       });
     </script>
   </body>
