--- a/data/index.css
+++ b/data/index.css
@@ -381,3 +381,21 @@ footer {
     /* animation-duration is set by JS */
     animation-play-state: running; /* Default state */
 }
+
+#warning-banner.hidden {
+    display: none;
+}
+
+#warning-message {
+    background-color: var(--color4-light);
+    border: 1px solid var(--color4-dark);
+    color: var(--color4-dark);
+    padding: 10px 20px;
+    border-radius: var(--corner-radius);
+    box-shadow: 0 1px 3px var(--shadow);
+    font-size: 16px;
+    text-align: center;
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
+}
